--- a/votedemo/index.html
+++ b/votedemo/index.html
@@ -115,4 +115,7 @@
     </div>
   </div>
 </body>
+<script src="js/zepto.min.js"></script>
+<script src="js/dropload.js"></script>
+<script src="js/vote.js"></script>
 </html>
