--- a/votedemo/detail.html
+++ b/votedemo/detail.html
@@ -12,10 +12,10 @@
 			<div class="personal">
 				<div class="pl">
 					<div class="head">
-						<img src="images/girl.png" alt="">
+						<img src="images/kfc.jpg" alt="">
 					</div>
 					<div class="p_descr">
-						<p>娜美</p>
+						<p>肯德基</p>
 						<p>编号#10</p>
 					</div>
 				</div>
@@ -26,7 +26,7 @@
 					</div>
 				</div>
 				<div class="motto">
-					我要吃橘子
+					生活如此多娇”、“尽情自在肯德基！
 				</div>
 			</div>
 			<div class="home register">
